Create paint offset transform for sticky

Sticky positioning should reset the paint offset transform. This is
needed for the same reason we require a paint offset translation for
CSS transform or scroll: paint offsets must be relative to the
containing transform, because the inputs to GeometryMapper are in such
a space.

Bug: 891166
Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I5b142d8915bd3176596a81eb4e73645fa99d2d23
Reviewed-on: https://chromium-review.googlesource.com/c/1269516
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597741}