third_party/blink/renderer/core/paint/paint_property_tree_builder.cc
@@ -317,6 +317,13 @@ static bool NeedsIsolationNodes(const LayoutObject& object) {
   return object.HasLayer() && object.ShouldApplyPaintContainment();
 }
 
+static bool NeedsStickyTranslation(const LayoutObject& object) {
+  if (!object.IsBoxModelObject())
+    return false;
+
+  return object.StyleRef().HasStickyConstrainedPosition();
+}
+
 static bool NeedsPaintOffsetTranslation(const LayoutObject& object) {
   if (!object.IsBoxModelObject())
     return false;
@@ -349,6 +356,8 @@ static bool NeedsPaintOffsetTranslation(const LayoutObject& object) {
     return true;
   }
   if (NeedsScrollOrScrollTranslation(object))
+    return true;
+  if (NeedsStickyTranslation(object))
     return true;
   if (NeedsPaintOffsetTranslationForScrollbars(box_model))
     return true;
@@ -434,13 +443,6 @@ void FragmentPaintPropertyTreeBuilder::UpdatePaintOffsetTranslation(
   } else {
     OnClear(properties_->ClearPaintOffsetTranslation());
   }
-}
-
-static bool NeedsStickyTranslation(const LayoutObject& object) {
-  if (!object.IsBoxModelObject())
-    return false;
-
-  return object.StyleRef().HasStickyConstrainedPosition();
 }
 
 void FragmentPaintPropertyTreeBuilder::UpdateStickyTranslation() {
